bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini=false) {
           ^BDR:4: error: value update is not a member of Boolean
  if (estSurMessage()=false) {
      ^